--- a/PartsProject/nbproject/private/private.properties
+++ b/PartsProject/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\alynne.silva\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\thasr\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
